2014-05-26  gepr  <gepr@tempusdictum.com>

	* glossary.html: Add "analog" from pharmres paper.  Link to analog from mechanism.

2014-05-22  gepr  <gepr@tempusdictum.com>

	* glossary.html: Add "emergence" and more to "mechanism".

2014-02-26  gepr  <gepr@tempusdictum.com>

	* future.html: Imported the old future page.

	* software.html: Imported the old software page.

	* projects.html: Fixed Neil's link.

	* documents.html: Imported the documents from the old furmwww.

	* isl.html: Added the desc. of the ISL and the associated images.

	* projects.html: Change title.  Fix ACIMS link.

	* is-hic.html, images/ishic: Add IS-HIC. Add images for IS-HIC.
	
	* glossary.html: Add glossary.

	* about, contact, documents, software, future: Change title.

2014-02-25  gepr  <gepr@tempusdictum.com>

	* projects.html: Port content from old site.

	* Move old furmwww to old-furmwww.  Import new furmwww.

2012-06-27  gepr  <gepr@tempusdictum.com>

	* index.html: Add anchors to remaining articles.  Remove online-only complexity article.

	* scripts/website.css: Remove stupid underlining of entire paragraphs.

2011-10-24  gepr  <gepr@tempusdictum.com>

	* index.html: Added Tbiomed "grounding" paper.

2010-12-20  glen e. p. ropella  <gepr@tempusdictum.com>

	* index.html: Added DDR paper.

2010-12-03  glen e. p. ropella  <gepr@tempusdictum.com>

	* index.html(<a name="cvsc"/>): Added a new paper.
	(<a name="tracingI"/>): Fixed date on this paper.  Added a name anchor.

2010-04-20  glen e. p. ropella  <gepr@tempusdictum.com>

	* index.html: Added new Tracing-II paper.

2009-11-05  glen  <gepr@tempusdictum.com>

	* index.html: Added new pharmres paper

2009-01-16  glen  <gepr@tempusdictum.com>

	* index.html: Added google verify meta tag.
