@@ -275,6 +275,16 @@
 
  <dt><a name="thesis">n. thesis:</a></dt> <dd>a position, proposition, representation, or composite assertion maintained by argument.</dd>
 
+ <dt><a name="use case">n. use case:</a></dt> <dd>a sequence of particular interactions between a user and a tool.
+    <br>Notes:
+    <ol>
+      <li>Traditional definitions of <em>use case</em> include the objective of the user, a system instead of a tool, the context in which the user and tools exist, particular types of interactions like stimulus-response, etc.  These traditional definitions give rise to unnecessary vagaries and abstractions.</li>
+      <li>It is important that the interactions be concrete.  It is a particular <strong>case</strong>, not set of similar cases.  For example, rather than a use case for a bank machine including "establish user identity", it should be "find an exact match between user data and one unique record from the user identity database".  See <a href="#usage pattern">usage pattern</a>.</li>
+    </ol>
+</dd>
+
+ <dt><a name="usage pattern">n. usage pattern:</a></dt> <dd>a regular or repeated similarity between multiple use cases of a tool or set of tools.</dd>
+
  <dt><a name="valid">adj. valid:</a></dt> <dd>a believable, convincing, well-grounded, or strongly argued statement, assertion, or representation.</dd>
 
  <dt><a name="validity">n. validity:</a></dt> <dd>the believability or strength of a statement, assertion, or representation.  Technically, validity is the degree to which an assertion can be trusted as true enough or true to within some tolerance.</dd>
