@@ -1,3 +1,7 @@
+2014-07-15  gepr  <gepr@tempusdictum.com>
+
+	* glossary.html: Add "use case" and "usage pattern".
+
 2014-05-26  gepr  <gepr@tempusdictum.com>
 
 	* glossary.html: Add "analog" from pharmres paper.  Link to analog from mechanism.
